# fastapi-template

./: .gitignore  Dockerfile  README.md  README_ja.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
app/: main.py
app/api/v1/: api.py
app/api/v1/routers/: items.py
app/core/: config.py
app/crud/: item.py
app/models/: item.py
app/schemas/: item.py
app/services/: item_service.py
docs/: slack-webhook-setup.md
tests/: conftest.py
tests/api/: test_items.py
tests/services/: test_item_service.py
